# ai-tutor

./: .env.example  .gitignore  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_language.py  0003_add_subtopic_lesson_prompt.py  0004_add_users.py  0005_add_user_api_keys.py  0006_add_course_user_id.py  0007_model_defaults_cleanup.py
backend/app/: constants.py  env.py  main.py
backend/app/agents/ai_tutor/: client_factory.py  language.py  orchestrator.py  streaming.py  system_prompt.py
backend/app/agents/ai_tutor/agents/: __init__.py  course_creation.py  lesson.py  on_demand_agent.py  progress.py  quiz.py
backend/app/agents/ai_tutor/prompts/: content_generator.py  course_builder.py  course_creation_supervisor.py  curriculum_research.py  learning_planner.py  lesson.py  on_demand_supervisor.py  progress.py  quiz_generator.py  validation.py
backend/app/agents/ai_tutor/schemas/: __init__.py  course_blueprint.py  course_creation.py  curriculum.py  learning_plan.py  lesson.py  progress.py  quiz.py  validation.py
backend/app/auth/: __init__.py  config.py  dependencies.py  jwks.py  user.py
backend/app/db/: engine.py  models.py  repository.py
backend/app/routes/: courses.py  deps.py  me.py  progress.py  settings.py
backend/app/serializers/: course.py
backend/app/services/: __init__.py  ai_client_factory.py  api_key_service.py  encryption.py  errors.py
frontend/: .env.example  README.md  (+4 more)
(+72 files in other folders)
