[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "deepagents>=0.6.12",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "langchain-openai>=1.3.4",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
]
